pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints3.pkl
foo: Int(this
  + two
    / three
  == four) = 4

local two = 2

local three = 3

local four = 4
